micro-two/service.yml
apiVersion: v1
kind: Service
metadata:
  name: micro-two
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: micro-two
